--- a/style.css
+++ b/style.css
@@ -13,12 +13,17 @@ h1{
 
 section{
  display: flex;
+ margin-bottom: 150px;
 }
 
 
 .top-part{
  width: 50%;
  padding-left: 5%;
+}
+
+.top-banner2{
+ margin-top: 20px;
 }
 
 .top-part img{
@@ -33,9 +38,48 @@ section{
  font-weight: 700;
  font-family:sans-serif;
  color:white;
+ text-transform: uppercase;
+}
+
+.btn-two{
+ margin-top:50px;
+ text-decoration: none;
+ background-image: linear-gradient(tomato, red);
+ padding: 10px 40px;
+ border-radius: 5px;
+ font-weight: 700;
+ font-family:sans-serif;
+ color:white;
+ text-transform: uppercase;
 }
 
 .top-banner{
  background-image: url(./images/top-banner.png);
- background-repeat: no;
+ background-repeat:no-repeat;
+}
+
+/* Top-banner secound */
+
+.top-part1{
+ width: 50%;
+ padding-left: 5%;
+ padding-right: 2%;
+
+}
+
+.top-part2{
+ width: 50%;
+ padding-right: 10%;
+
+}
+
+.top-part1 img{
+ width: 80%;
+}
+
+
+.top-banner2{
+ background-image: url(./images/dream-bg.png);
+ background-repeat: no-repeat;
+ background-position: right;
 }
