--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ h1{
  color: orange;
 }
 
-section{
+
+
+.flexible-container{
  display: flex;
  margin-bottom: 150px;
 }
@@ -58,6 +60,7 @@ section{
  background-repeat:no-repeat;
 }
 
+
 /* Top-banner secound */
 
 .top-part1{
@@ -82,4 +85,51 @@ section{
  background-image: url(./images/dream-bg.png);
  background-repeat: no-repeat;
  background-position: right;
+}
+
+
+/* Experiences section */
+
+.experiance-part{
+ background-image: url(./images/exp-bg.png);
+ background-repeat: no-repeat;
+ background-position: left;
+
+}
+
+.top-part3{
+ width: 40%;
+ margin-left: 5%;
+ margin-right: 5%;
+ padding-left: 20px;
+ border-radius: 10px;
+ box-shadow: 10px 10px 40px gray;
+ border-left: 10px solid;
+}
+
+#side-design{
+ border-left: 7px solid;
+ border-image: linear-gradient(blue, cyan);
+ border-image-slice: 1;
+}
+
+#side-design1{
+ border-left: 7px solid;
+ border-image: linear-gradient(salmon, tomato);
+ border-image-slice: 1;
+}
+
+.top-part3 h1{
+ font-size: 30px;
+}
+
+.another-orange-color{
+ color: orange;
+}
+
+
+
+/* Footer */
+footer p{
+ text-align: center;
 }
